@@ -1,0 +1,16 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+
+use Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::ItemForThisSense::Dog;
+use Wikibase::Datatype::Print::Statement;
+
+# Object.
+my $obj = Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::ItemForThisSense::Dog->new;
+
+# Print out.
+print scalar Wikibase::Datatype::Print::Statement::print($obj);
+
+# Output:
+# P5137: Q144 (normal)
